--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "deploy": "gh-pages -d dist",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
@@ -13,6 +14,7 @@
     "@nuxt/content": "^2.12.1",
     "@nuxt/ui": "^2.15.0",
     "chart.js": "^4.4.2",
+    "gh-pages": "^6.1.1",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.0",
