--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
+    "@nuxt/image-edge": "^1.3.0-28493895.369b747",
     "@nuxt/ui": "^2.15.0",
     "chart.js": "^4.4.2",
     "gh-pages": "^6.1.1",
